bug #39797.  Fixed unknown content-type sniffer to handle 8-bit characters...